[fix] profile overflow issue.

--- a/client/src/components/pages/Profile/Profile.scss
+++ b/client/src/components/pages/Profile/Profile.scss
@@ -1,5 +1,5 @@
 .profile {
-  width: 100vw;
-  height: 100vh;
-  position: relative;
+  // width: 100vw;
+  // height: 100vh;
+  // position: relative;
 }
